--- a/src/main/resources/netty/client/sample.fxml
+++ b/src/main/resources/netty/client/sample.fxml
@@ -4,12 +4,14 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="450.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="netty.client.Controller">
+<AnchorPane prefHeight="465.0" prefWidth="598.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="netty.client.Controller">
    <cursor>
       <Cursor fx:constant="DEFAULT" />
    </cursor>
    <children>
-      <TextField fx:id="input" onAction="#send" layoutX="5.0" layoutY="414.0" prefHeight="30.0" prefWidth="226.0" />
-      <ListView fx:id="listView" layoutX="6.0" layoutY="6.0" prefHeight="399.0" prefWidth="287.0" />
+      <ListView fx:id="clientView" layoutX="6.0" layoutY="6.0" prefHeight="399.0" prefWidth="287.0" />
+      <ListView fx:id="serverView" layoutX="302.0" layoutY="6.0" prefHeight="399.0" prefWidth="287.0" />
+      <Button onAction="#toServer" layoutX="14.0" layoutY="412.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="93.0" text="&gt;" />
+      <Button onAction="#fromServer" layoutX="117.0" layoutY="412.0" mnemonicParsing="false" prefHeight="38.0" prefWidth="94.0" text="&lt;" />
    </children>
 </AnchorPane>
